# Toast

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/fonts/: fonts.css
scripts/: toast.sh
src/: App.css  App.jsx  Homepage.css  Homepage.jsx  HowTo.css  HowTo.jsx  Toast.jsx  UIUtils.jsx  logger.js  main.jsx  mediaPaths.js  togoLock.js
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.dev.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/app_utils/: delete_audio.rs  delete_img.rs  duplicate_media.rs  import_anki.rs  manage_audio.rs  manage_img.rs  media_permissions.rs  mod.rs  paths.rs  save_audio.rs  save_img.rs  togo.rs
src-tauri/src/commands/: cards.rs  groups.rs  import.rs  mod.rs  pages.rs  plans.rs  resources.rs  similar.rs  srs.rs  stats.rs  todos.rs  togo.rs
src-tauri/src/crud/: create.rs  delete.rs  mod.rs  models.rs  read.rs  scheduling.rs  update.rs
src/Decks/: CardFace.jsx  Decks.css  Decks.jsx
src/Notebooks/: CustomExtentions.jsx  NotebookUtils.js  Notebooks.css  Notebooks.jsx
src/Plans/: PlanUtils.jsx  Plans.css  Plans.jsx  Todos.jsx
src/Stats/: Stats.css  Stats.jsx
src/ToGo/: ToGo.css  ToGo.jsx
worker/: package.json  wrangler.toml
worker/src/: index.js  limiter.js
