[package]
name = "toast"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Toast"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = "0.39.0"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
zip = "2"
chrono = "0.4.44"

