[package]
name = "toast"
# Must match tauri.conf.json — Toast to Go packages are keyed to this version.
version = "1.5.0"
description = "An all-in-one language learning resource hub"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "Toast"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "toast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
# deflate only: the C backends (lzma/bzip2/zstd) break cross-checks to windows-msvc
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = "0.4.44"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Used to set the Dock icon at runtime so macOS 26+ shows the transparent
# toast shape instead of compositing the bundled .icns onto a grey squircle
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "netbsd", target_os = "openbsd"))'.dependencies]
webkit2gtk = "2.0"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"

